--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ REACT_APP_RESTAURANT_API_URL=http://localhost:3003
 REACT_APP_DELIVERY_API_URL=http://localhost:3004
 REACT_APP_NOTIFICATION_API_URL=http://localhost:3005
 REACT_APP_ADMIN_API_URL=http://localhost:3006
+REACT_APP_PAYMENT_API_URL=http://localhost:3007
